Add transaction type field to invoice form

--- a/index.html
+++ b/index.html
@@ -40,6 +40,13 @@
               <input type="text" placeholder="Supplier / Customer" />
             </div>
             <div class="field">
+              <label>Transaction Type</label>
+              <select>
+                <option>Sales</option>
+                <option>Approval</option>
+              </select>
+            </div>
+            <div class="field">
               <label>Deet</label>
               <input type="text" placeholder="Reference / Details" />
             </div>
