Add description and grade saved list panels

--- a/index.html
+++ b/index.html
@@ -172,6 +172,34 @@
                 <span class="chip">7MM <button>×</button></span>
               </div>
             </div>
+            <div class="list-panel">
+              <h4>Descriptions</h4>
+              <div class="input-row">
+                <input type="text" placeholder="Add new description" />
+                <button class="small-button">Add</button>
+              </div>
+              <div class="chip-row">
+                <span class="chip">Brilliant cut <button>×</button></span>
+                <span class="chip">Step cut <button>×</button></span>
+                <span class="chip">Mixed cut <button>×</button></span>
+                <span class="chip">Rose cut <button>×</button></span>
+                <span class="chip">Cabochon <button>×</button></span>
+              </div>
+            </div>
+            <div class="list-panel">
+              <h4>Grades</h4>
+              <div class="input-row">
+                <input type="text" placeholder="Add new grade" />
+                <button class="small-button">Add</button>
+              </div>
+              <div class="chip-row">
+                <span class="chip">#1 <button>×</button></span>
+                <span class="chip">#2 <button>×</button></span>
+                <span class="chip">#3 <button>×</button></span>
+                <span class="chip">#4 <button>×</button></span>
+                <span class="chip">#5 <button>×</button></span>
+              </div>
+            </div>
           </div>
           <div class="modal-footer">
             <button class="primary-button">Save</button>
