Convert grade and description to selects

--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@
             </div>
             <div class="field">
               <label>Base Grade</label>
-              <input type="text" value="#1" />
+              <select data-saved-list="grades">
+                <option>-- Select --</option>
+              </select>
             </div>
             <div class="field">
               <label>How Many Rows</label>
@@ -66,7 +68,9 @@
             </div>
             <div class="field">
               <label>Description</label>
-              <input type="text" placeholder="" />
+              <select data-saved-list="descriptions">
+                <option>-- Select --</option>
+              </select>
             </div>
             <div class="field">
               <label>Shape (initial)</label>
