Add dynamic partywise statement loading and filtering

--- a/index.html
+++ b/index.html
@@ -450,17 +450,17 @@
           <div class="form-grid compact statement-filters">
             <div class="field">
               <label>Party</label>
-              <select>
+              <select id="partywise-party">
                 <option>Select Party</option>
               </select>
             </div>
             <div class="field">
               <label>From Date</label>
-              <input type="text" placeholder="mm/dd/yyyy" />
+              <input id="partywise-from" type="text" placeholder="mm/dd/yyyy" />
             </div>
             <div class="field">
               <label>To Date</label>
-              <input type="text" placeholder="mm/dd/yyyy" />
+              <input id="partywise-to" type="text" placeholder="mm/dd/yyyy" />
             </div>
           </div>
           <div class="table-shell">
