Add backend-driven client ledger loading and rendering

--- a/index.html
+++ b/index.html
@@ -483,15 +483,15 @@
           <div class="form-grid compact">
             <div class="field">
               <label>Client</label>
-              <input type="text" placeholder="Select Client" />
+              <input id="client-ledger-party" type="text" placeholder="Select Client" />
             </div>
             <div class="field">
               <label>From Date</label>
-              <input type="text" placeholder="mm/dd/yyyy" />
+              <input id="client-ledger-from" type="text" placeholder="mm/dd/yyyy" />
             </div>
             <div class="field">
               <label>To Date</label>
-              <input type="text" placeholder="mm/dd/yyyy" />
+              <input id="client-ledger-to" type="text" placeholder="mm/dd/yyyy" />
             </div>
           </div>
           <div class="table-shell">
