Center menu and add dedicated page routes

--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
     <header class="site-header">
       <h1>Invoice and Statement</h1>
       <nav class="site-nav" aria-label="Application pages">
-        <a class="menu-tab" data-page-link href="#invoice-ui">Invoice UI</a>
-        <a class="menu-tab" data-page-link href="#saved-lists">Saved Lists</a>
-        <a class="menu-tab" data-page-link href="#invoice-report">Invoice Report</a>
-        <a class="menu-tab" data-page-link href="#cash-flow">Cash Flow UI</a>
-        <a class="menu-tab" data-page-link href="#partywise-statement">Partywise Statement</a>
-        <a class="menu-tab" data-page-link href="#client-ledger">Client Ledger</a>
+        <a class="menu-tab" data-page-link href="/invoice-ui">Invoice UI</a>
+        <a class="menu-tab" data-page-link href="/saved-lists">Saved Lists</a>
+        <a class="menu-tab" data-page-link href="/invoice-report">Invoice Report</a>
+        <a class="menu-tab" data-page-link href="/cash-flow">Cash Flow UI</a>
+        <a class="menu-tab" data-page-link href="/partywise-statement">Partywise Statement</a>
+        <a class="menu-tab" data-page-link href="/client-ledger">Client Ledger</a>
       </nav>
     </header>
 
